--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
+    <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style-min.css">
+
     <title>Devstars*</title>
 </head>
 
 <body>
 
     <!-- example 1 - using absolute position for center -->
-    <nav class="navbar navbar-expand-md navbar-light border-bottom">
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Devstars*</a>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" class="logo" alt="">
+            </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -35,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="">Contact</a>
                     </li>
+                    <li>
+                        <a class="btn btn-primary" href="#" role="button">Sign-up</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -44,8 +53,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="display-4">Fluid jumbotron</h1>
-                    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                    <p class="lead">Say hi to Devstars*</p>
+                    <h1 class="display-4">The place for new devs to come together.</h1>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign-up</a>
                 </div>
                 <div class="col">
 
@@ -55,7 +65,44 @@
         </div>
     </div>
 
+    <section class="container text-center">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <p class="lead">About Devstars*</p>
+                <p>Creating an enviroment where developers can shar work and reach out to form there own networks. Build, create
+                    and network, we are open source.</p>
+                <p>Creativity knows no limits.</p>
+            </div>
+        </div>
 
+    </section>
+
+    <section class="container">
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Mobile</h5>
+                    <p class="card-text">On the go? We are too, just put us in your pocket.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="img/2.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Tablet</h5>
+                    <p class="card-text">Got you covered, our UI is expertly crafted to give tablet users a spectacular experience.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="img/3.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Desktop</h5>
+                    <p class="card-text">Got to our website and use all that real estate of a desktop screen to get stuff done.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
