--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+    
     <!-- example 1 - using absolute position for center -->
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
@@ -68,7 +68,8 @@
     <section class="container text-center">
         <div class="row justify-content-center">
             <div class="col-6">
-                <p class="lead">About Devstars*</p>
+                <h3>About Devstars*</h3>
+                <hr>
                 <p>Creating an enviroment where developers can shar work and reach out to form there own networks. Build, create
                     and network, we are open source.</p>
                 <p>Creativity knows no limits.</p>
@@ -105,11 +106,18 @@
     </section>
 
 
+    <!-- Email sign up -->
+    <!-- contact form -->
+    <!-- footer -->
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+        <script src="js/main.js"></script>
 </body>
 
 </html>
