--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    
+
     <!-- example 1 - using absolute position for center -->
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
@@ -75,7 +75,6 @@
                 <p>Creativity knows no limits.</p>
             </div>
         </div>
-
     </section>
 
     <section class="container">
@@ -106,6 +105,31 @@
     </section>
 
 
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">Name</label>
+                        <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword4">E-Mail</label>
+                        <input type="email" class="form-control" id="inputPassword4" placeholder="E-Mail">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <textarea class="form-control" id="inputAddress" placeholder="Message">
+                    </textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
+
+        </div>
+    </div>
+
     <!-- Email sign up -->
     <!-- contact form -->
     <!-- footer -->
@@ -117,7 +141,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
