--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputAddress">Address</label>
+                    <label for="inputAddress">Message</label>
                     <textarea class="form-control" id="inputAddress" placeholder="Message">
                     </textarea>
                 </div>
