--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- example 1 - using absolute position for center -->
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light border-bottom">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.png" class="logo" alt="">
@@ -41,8 +41,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="">Contact</a>
                     </li>
-                    <li>
-                        <a class="btn btn-primary" href="#" role="button">Sign-up</a>
+                    <li class="nav-item">
+                        <a class="btn btn-primary menu-signup" href="#" role="button">Sign-up</a>
                     </li>
                 </ul>
             </div>
@@ -52,32 +52,49 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-6 col-md-12 media-center">
                     <p class="lead">Say hi to Devstars*</p>
                     <h1 class="display-4">The place for new devs to come together.</h1>
+                    <br>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Sign-up</a>
                 </div>
-                <div class="col">
-
+                <div class="col-6 d-none d-lg-block">
+                    <img class="img-fluid" src="img/hero.png" alt="">
                 </div>
             </div>
 
         </div>
     </div>
 
-    <section class="container text-center">
-        <div class="row justify-content-center">
-            <div class="col-8">
-                <h3>About Devstars*</h3>
-                <hr>
-                <p>Creating an enviroment where developers can shar work and reach out to form there own networks. Build, create
-                    and network, we are open source.</p>
-                <p>Creativity knows no limits.</p>
+    <section id="about" class="section-container">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 text-center">
+                    <iframe height="282" width="500" src="https://www.youtube.com/embed/Qqxwl1r5VG8?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-5 px-5 col-md-10 media-center">
+                    <h3>About Devstars*</h3>
+                    <hr>
+                    <p>Creating an enviroment where developers can shar work and reach out to form there own networks. Build,
+                        create and network, we are open source.</p>
+                    <p>Creativity knows no limits.</p>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Get Started</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="container">
+    <section class="container section-container text-center">
+
+        <div class="row justify-content-center">
+            <div class="col">
+                <h3>Getting Started</h3>
+                <hr>
+                <br>
+                <br>
+            </div>
+        </div>
         <div class="card-deck">
             <div class="card">
                 <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
@@ -104,31 +121,58 @@
 
     </section>
 
+    <section id="about" class="section-container">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h3 class="text-center">Contact</h3>
+                    <hr>
+                    <br>
+                    <br>
 
-    <div class="row justify-content-center">
-        <div class="col-6">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail4">Name</label>
-                        <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="inputPassword4">E-Mail</label>
-                        <input type="email" class="form-control" id="inputPassword4" placeholder="E-Mail">
-                    </div>
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Name</label>
+                                <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">E-Mail</label>
+                                <input type="email" class="form-control" id="inputPassword4" placeholder="E-Mail">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress">Message</label>
+                            <textarea class="form-control" id="inputAddress" placeholder="Message">
+                            </textarea>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </form>
+
                 </div>
-                <div class="form-group">
-                    <label for="inputAddress">Message</label>
-                    <textarea class="form-control" id="inputAddress" placeholder="Message">
-                    </textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary">Sign in</button>
-            </form>
-
+            </div>
         </div>
-    </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <address>
+                <strong>DevStars*</strong>
+                <br> 1 Dev Street
+                <br> San Francisco, CA 94103
+                <br>
+                <abbr title="Phone">P:</abbr> (123) 456-7890
+            </address>
+
+            <address>
+                <strong>Full Name</strong>
+                <br>
+                <a href="mailto:#">first.last@example.com</a>
+            </address>
+        </div>
+    </footer>
+
 
     <!-- Email sign up -->
     <!-- contact form -->
