--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
             <div class="navbar-collapse collapse" id="collapsingNavbar">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item px-3">
                         <a class="nav-link" href="">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-3">
                         <a class="nav-link" href="">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-3">
                         <a class="nav-link" href="">Contact</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-3">
                         <a class="btn btn-primary menu-signup" href="#" role="button">Sign-up</a>
                     </li>
                 </ul>
@@ -49,20 +49,11 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 media-center">
-                    <p class="lead">Say hi to Devstars*</p>
-                    <h1 class="display-4">The place for new devs to come together.</h1>
-                    <br>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign-up</a>
-                </div>
-                <div class="col-6 d-none d-lg-block">
-                    <img class="img-fluid" src="img/hero.png" alt="">
-                </div>
-            </div>
-
+    <div class="jumbotron jumbotron-fluid hero-img m-0 p-0">
+        <div class="container  text-center">
+            <h1 class="display-4 mt-5 pt-5">The place for new devs to come together.</h1>
+            <br>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Sign-up</a>
         </div>
     </div>
 
@@ -70,8 +61,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
-                    <iframe height="282" width="500" src="https://www.youtube.com/embed/Qqxwl1r5VG8?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"
-                        allowfullscreen></iframe>
+                    <img class="img-responsive" src="img/about.jpeg" alt="">
                 </div>
                 <div class="col-lg-5 px-5 col-md-10 media-center">
                     <h3>About Devstars*</h3>
@@ -143,11 +133,11 @@
                         </div>
                         <div class="form-group">
                             <label for="inputAddress">Message</label>
-                            <textarea class="form-control" id="inputAddress" placeholder="Message">
+                            <textarea rows="8" class="form-control" id="inputAddress" placeholder="Message">
                             </textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button type="submit" class="btn btn-primary">Sign up</button>
                     </form>
 
                 </div>
@@ -155,7 +145,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="p-5">
         <div class="container">
             <address>
                 <strong>DevStars*</strong>
